@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998--2017 The R Core Team
+ *  Copyright (C) 1998--2018 The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -2913,32 +2913,54 @@ SEXP attribute_hidden
 do_setFileTime(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     checkArity(op, args);
-    const char *fn = translateChar(STRING_ELT(CAR(args), 0));
-    double ftime = asReal(CADR(args));
+    const char *fn;
+    double ftime;
     int res;
+    R_xlen_t i, n, m;
+    SEXP paths, times, ans;
+    const void *vmax;
 
-#ifdef Win32
-    res  = winSetFileTime(fn, ftime);
-#elif defined(HAVE_UTIMENSAT)
-    struct timespec times[2];
+    paths = CAR(args);
+    if (!isString(paths))
+	error(_("invalid '%s' argument"), "path");
+    n = XLENGTH(paths);
+    PROTECT(times = coerceVector(CADR(args), REALSXP));
+    m = XLENGTH(times);
+    if (!m && n) error(_("'%s' must be of length at least one"), "time");
+    
+    PROTECT(ans = allocVector(LGLSXP, n));
+    vmax = vmaxget();
+    for(R_xlen_t i = 0; i < n; i++) {
+	fn = translateChar(STRING_ELT(paths, i));
+	ftime = REAL(times)[i % m];
+	#ifdef Win32
+	    res = winSetFileTime(fn, ftime);
+	#elif defined(HAVE_UTIMENSAT)
+	    struct timespec times[2];
 
-    times[0].tv_sec = times[1].tv_sec = (int)ftime;
-    times[0].tv_nsec = times[1].tv_nsec = (int)(1e9*(ftime - (int)ftime));
+	    times[0].tv_sec = times[1].tv_sec = (int)ftime;
+	    times[0].tv_nsec = times[1].tv_nsec = (int)(1e9*(ftime - (int)ftime));
 
-    res = utimensat(AT_FDCWD, fn, times, 0) == 0;
-#elif defined(HAVE_UTIMES)
-    struct timeval times[2];
+	    res = utimensat(AT_FDCWD, fn, times, 0) == 0;
+	#elif defined(HAVE_UTIMES)
+	    struct timeval times[2];
 
-    times[0].tv_sec = times[1].tv_sec = (int)ftime;
-    times[0].tv_usec = times[1].tv_usec = (int)(1e6*(ftime - (int)ftime));
-    res = utimes(fn, times) == 0;
-#elif defined(HAVE_UTIME)
-    struct utimbuf settime;
+	    times[0].tv_sec = times[1].tv_sec = (int)ftime;
+	    times[0].tv_usec = times[1].tv_usec = (int)(1e6*(ftime - (int)ftime));
 
-    settime.actime = settime.modtime = (int)ftime;
-    res = utime(fn, &settime) == 0;
-#endif
-    return ScalarLogical(res);
+	    res = utimes(fn, times) == 0;
+	#elif defined(HAVE_UTIME)
+	    struct utimbuf settime;
+
+	    settime.actime = settime.modtime = (int)ftime;
+	    res = utime(fn, &settime) == 0;
+	#endif
+	LOGICAL(ans)[i] = (res == 0) ? FALSE : TRUE;
+	fn = NULL;
+	vmaxset(vmax); // throws away result of translateChar
+    }
+    UNPROTECT(2); /* times, ans */
+    return ans;
 }
 
 #ifdef Win32
